--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "del": "^4.1.1",
+    "imask": "^5.2.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^5.0.2"
   }
